Made png video have controls

--- a/_posts/2021-04-12-png.md
+++ b/_posts/2021-04-12-png.md
@@ -4,7 +4,7 @@ date: 2021-04-12 14:45:44 -0700
 ---
 I have been animating this video over several weeks, and now it is done.
 
-<video src="/assets/png.mp4"><a href="/assets/png.mp4">Download video (13098580 bytes)</a> because your browser down't support the <code>video</code> element.</video>
+<video src="/assets/png.mp4" controls><a href="/assets/png.mp4">Download video (13098580 bytes)</a> because your browser down't support the <code>video</code> element.</video>
 
 It's a video about the PNG image format.
 The text is taken from the very 1990s-like list of spiffy features from [An informal history of PNG, on the PNG website](http://www.libpng.org/pub/png/#history). It was probably written in the actual 1990s.
