--- a/_posts/2021-04-03-legs-font.md
+++ b/_posts/2021-04-03-legs-font.md
@@ -8,13 +8,11 @@ EGS uses a font made by the author that has not been distributed to my knowledge
 
 Notable things about L.E.G.S are:
 - the curly bracket characters { } are instead these little sound effect lines. This is consistent with what Dan the author said when creating the font<sup><a href="#footnote-1">[1]</a></sup>.
-- the quotation mark &#34; isn't directionless and instead changes direction based on context (unchanging directional quotation marks ‟ and ” are also in the font). This was a choice by me because I don't know how Dan implemented directional quotes (although I later discovered a directionless quote does show up in EGS rarely)
+- the square bracket characters [ ] are instead directional quotation marks ‟ ” . This was a choice by me because the square brackets have never been seen in Dan's font, but both directionless and directional quotation marks have.
 - some symbols are not included, despite being known to occur Dan's font, due to no high-resolution versions of them being available to trace.
 
-You can [download the current version of L.E.G.S here (11868 bytes)](/assets/L.E.G.S.ttf).
+You can [download the current version of L.E.G.S here (12444 bytes)](/assets/L.E.G.S.ttf).
 
 License: I give everyone the rights to do whatever they want with the font except for lying about it. Don't say it came to you in a dream in 1993 and you spent several years designing it to perfection as you travelled through France. That would be an example of a lie. Don't say you forgot where you got it either, because that would be another lie, unless you actually did forget, which is not encouraged.
-
-Known high-definition symbols not included in the font are directionless quotation marks &#34; and the slash / , both of which I missed on my initial pass of the high-definition comics available. If you would like to see these symbols added to the font, feel free to let me know and I'll add them when I have some free time (as opposed to right now when I am procrastinating on my homework. It has been surprisingly productive for anything other than the homework). Also feel free to suggest how directionless quotes would be implemented. I have wondered if Dan uses the square brackets [ ] for the directional quotes, just because square brackets have never been seen in Dan's font.
 
 <span id="footnote-1">Footnote 1</span>: (yes I've got a footnote it's so fancy) ["Another Font Test of Doom" on DeviantArt](https://www.deviantart.com/danshive/art/Another-Font-Test-of-Doom-108927695)
