Fixed image URL in post for 2021-01-20

--- a/_posts/2021-01-20-shirt.md
+++ b/_posts/2021-01-20-shirt.md
@@ -9,6 +9,6 @@ Someone I know was apparently a critical critic of the first images I took, crit
 
 Here is an image of me in the shirt, with hopefully more decent lighting?
 
-![An individual with light skin, dark long hair, and glasses wears a shirt reading "Web developers do it with style (and class)"]({{site.url}}assets/2021015.jpg)
+![An individual with light skin, dark long hair, and glasses wears a shirt reading "Web developers do it with style (and class)"]({{"assets/2021015.jpg"|relative_url}})
 
 This is the least dramatic face reveal ever.
