Inserted info about the RedBubble shirt

--- a/_posts/2021-01-20-shirt.md
+++ b/_posts/2021-01-20-shirt.md
@@ -2,8 +2,9 @@
 title: Shirt!
 date: 2021-01-20 13:17:19 -0800
 ---
-In an earlier post, [I ordered a custom shirt]({{site.url}}2020/12/27/a-gift-and-the-subsequent-shirt). I have the shirt now!  
-(I actually had it for a while and just didn't get around to sharing it on my blog.)
+In an earlier post, [I ordered a custom shirt]({{site.url}}/2020/12/27/a-gift-and-the-subsequent-shirt). I have the shirt now!  
+(I actually had it for a while and just didn't get around to sharing it on my blog.)  
+<ins datetime="2021-12-18">The design was printed as expected; however, the design appears to be slowly coming off instead of staying on the shirt.</ins>
 
 Someone I know was apparently a critical critic of the first images I took, critiquing the lighting and image compression and focus. Does my room just have bad lighting for photographs?
 
