Fixed Lemon Demon URL bugs and moved some stuff around

--- a/_posts/2021-04-12-png.md
+++ b/_posts/2021-04-12-png.md
@@ -1,7 +1,7 @@
 ---
 title: png
 date: 2021-04-12 14:45:44 -0700
-last_modified_at: now
+last_modified_at: 2022-06-02
 ---
 I have been animating this video over several weeks, and now it is done.
 
