Added bodgy fix for LEGS font in some font renderers

--- a/_posts/2021-04-03-legs-font.md
+++ b/_posts/2021-04-03-legs-font.md
@@ -1,5 +1,6 @@
 ---
 title: LEGS font
+last_modified_at: 2023-06-15
 ---
 The L.E.G.S. font is a font made via me tracing the letters in the webcomic El Goonish Shive. Development on it actually started nearly a year ago, on 2020-05-02, but I just didn't consider the possibility of sharing it in a more accessible place until just now.
 
@@ -12,6 +13,11 @@ Notable things about L.E.G.S are:
 - some symbols are not included, despite being known to occur Dan's font, due to no high-resolution versions of them being available to trace.
 
 You can [download the current version of L.E.G.S here (12444 bytes)](/assets/L.E.G.S.ttf).
+
+<ins datetime=2023-06-15>
+Sometime afterward, GIMP and some other image editors started displaying the font too thin, for no discernible reason. The only fix I have is
+[a thicker version of the L.E.G.S font](/assets/L.E.G.S.B.ttf).
+</ins>
 
 License: I give everyone the rights to do whatever they want with the font except for lying about it. Don't say it came to you in a dream in 1993 and you spent several years designing it to perfection as you travelled through France. That would be an example of a lie. Don't say you forgot where you got it either, because that would be another lie, unless you actually did forget, which is not encouraged.
 
